--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">BottomNavWatson</string>
+    <string name="first_tab">First tab</string>
+    <string name="first_tab_action">Click to navigate from first tab to a detail</string>
+    <string name="second_tab">Second tab</string>
+    <string name="second_tab_action">Click to navigate from second tab to a detail</string>
+    <string name="detail_fragment">Detail fragment</string>
+    <string name="test_deep_links">Test deep links by clicking here and creating a notification</string>
+    <string name="watson_deep_links">Watson deep links</string>
+    <string name="watson_deep_links_desc">Click the notification to the open the sample app</string>
 </resources>
